--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="container">
         <h1>Etanol ou Gasolina?</h1>
         <form name="frmFlex" onsubmit="return calcular()" >
-            <img src="img/neutro.png" alt="display">
-            <input type="number" name="inputEtanol" placeholder="Etanol" required>
-            <input type="number" name="inputGasolina" placeholder="Gasolina" required>
+            <img src="img/neutro.png" alt="display" id="status">
+            <input type="number" step= "0.01" name="inputEtanol" placeholder="Etanol" required>
+            <input type="number" step= "0.01" name="inputGasolina" placeholder="Gasolina" required>
             <input type="submit" value="Calcular">
         </form>
     </div>
